--- a/client/src/assets/styles/LandingPage.css
+++ b/client/src/assets/styles/LandingPage.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap');
 
+:root {
+  --bg-color: #2a2f4a;
+}
+
 body {
   margin: 0;
   font-family: 'Source Sans Pro', sans-serif;
@@ -8,7 +12,7 @@ body {
 
 .header {
   color: #FFFFFF;
-  background: #000000;
+  background: var(--bg-color);
   height: 172px;
   position: relative;
 }
@@ -21,13 +25,12 @@ body {
   display: flex;         /* Centers the image inside the container */
   justify-content: center;
   align-items: center;
-  border: 5px solid black; 
+  border: 3px solid var(--bg-color); 
   position: absolute;
   top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 4;
-  background: #000000;
 }
 
 .profile-pic {
@@ -59,19 +62,20 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.2); /* Semi-transparent black overlay */
+  background: rgba(36, 41, 67);
+  opacity: 0.85;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 48px;
   z-index: 2;
-  align-items: flex-start;
+  /* align-items: flex-start; */
 }
 
 .text-container {
   display: inline-block;
   text-align: left;
-  max-width: 100%; 
+  margin: 0 48px 0 48px;
 }
 
 .title {
@@ -82,9 +86,8 @@ body {
 }
 
 .line {
-  display: block; /* Use inline-block to fit content width */
-  width: 100%; /* Adjust width based on content */
-  max-width: 100%; 
+  display: inline-block; /* Use inline-block to fit content width */
+  width: 95%; /* Adjust width based on content */
   height: 2px; /* Set the height of the line (thickness) */
   background-color: #FFFFFF; /* Set the color of the line */
 }
