--- a/client/src/assets/styles/LandingPage.css
+++ b/client/src/assets/styles/LandingPage.css
@@ -21,7 +21,7 @@ body {
   height: 306px;
   width: 306px;
   border-radius: 50%; 
-  overflow: hidden;      /* Ensures the image stays within the circle */
+  overflow: hidden;   
   display: flex;         /* Centers the image inside the container */
   justify-content: center;
   align-items: center;
@@ -86,10 +86,11 @@ body {
 }
 
 .line {
-  display: inline-block; /* Use inline-block to fit content width */
-  width: 95%; /* Adjust width based on content */
-  height: 2px; /* Set the height of the line (thickness) */
-  background-color: #FFFFFF; /* Set the color of the line */
+  display: inline-block; 
+  width: 95%; 
+  height: 2px; 
+  background-color: #FFFFFF;
+  margin-bottom: 10px;
 }
 
 .subtext {
@@ -98,4 +99,68 @@ body {
   font-weight: 500;
   letter-spacing: 0.25em;
   text-transform: uppercase;
+}
+
+.section-container {
+  display: flex;
+  width: 100%;
+}
+
+.section1-leftcontainer {
+  position: relative;
+  width: 864px;
+  max-width: 100%;
+  max-height: 450px;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.section1-leftcontainer img, .section1-rightcontainer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.section1-1-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #6FC3DF;
+  opacity: 0.85;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 48px;
+  z-index: 2;
+}
+
+.section-text-container {
+  display: block;
+  text-align: left;
+  margin: 4em 4em 4em 0em;
+  padding: 0 1em 0 0.2em;
+}
+
+.section-title {
+  font-size: 1.75em;
+  font-weight: 600;
+  line-height: 1.65;
+  margin-bottom: 5px;
+}
+
+.section-subtext {
+  font-size: 0.75em;
+  font-weight: 600;
+  letter-spacing: 0.25em;
+  margin: 0 0 2em 0;
+  text-transform: uppercase;
+}
+
+.section1-rightcontainer {
+  position: relative;
+  width: 576px;
+  max-width: 100%;
+  max-height: 450px;
+  height: 100vh;
+  overflow: hidden;
 }
